# double-quant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/double_quant/: __init__.py
src/double_quant/common/: __init__.py  metric.py  model.py
src/double_quant/optimizer/: __init__.py  linear.py  sapo.py
src/double_quant/solver/: __init__.py  linear.py
tests/double_quant/solver/: test_linear.py
