[project]
name = "double-quant"
version = "0.1.0"
description = "Quantum quantitive finance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["qiskit>=2.2.3", "scipy-stubs[scipy]>=1.16.3.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pyright]
typeCheckingMode = "basic"
